add o74 icd10 dialog

--- a/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_dropdown_content_o74.html
+++ b/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_dropdown_content_o74.html
@@ -1,10 +1,10 @@
 <div>
 	<div class="w3-border-bottom">
 		<i class="fa fa-filter fa-3"></i> <input
-			ng-keyup="keys_use.keyUp($event)"
-			ng-model="dropdown_data.seek[icpc2_nakaz74.selectedCell.col_k]"
-			placeholder="{{dropdown_data.seek_placeholder[icpc2_nakaz74.selectedCell.col_k]}}">
-		-2-
+			ng-keyup="keys_use.keyUp($event, view.dataName)"
+			ng-model="dropdown_data.seek[progr_am[view.dataName].selectedCell.col_k]"
+			placeholder="{{dropdown_data.seek_placeholder[progr_am[view.dataName].selectedCell.col_k]}}">
+		-3-
 	</div>
 	<div style="height: 200px; overflow: auto;">
 		<table style="">
@@ -16,16 +16,18 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="row in dropdown_data.list"
-					ng-click="icpc2_nakaz74.clickToSave[icpc2_nakaz74.selectedCell.col_k](row)"
+					ng-click="icpc2_nakaz74.clickToSave[progr_am[view.dataName].selectedCell.col_k](row)"
 					class="w3-hover-light-gray">
 					<td ng-repeat="(col_k,v) in dropdown_data.col_keys" ng-switch
 						on="col_k">
 						<div ng-switch-default
-							ng-bind-html="highlight(row[col_k], dropdown_data.seek[icpc2_nakaz74.selectedCell.col_k])"></div>
+							ng-bind-html="highlight(row[col_k], 
+							dropdown_data.seek[progr_am[view.dataName].selectedCell.col_k])"></div>
 						<a ng-switch-when="code|icd_code" 
 						ng-switch-when-separator="|"
 						href="#"
-						ng-bind-html="highlight(row[col_k], dropdown_data.seek[icpc2_nakaz74.selectedCell.col_k])"></a>
+						ng-bind-html="highlight(row[col_k], 
+						dropdown_data.seek[progr_am[view.dataName].selectedCell.col_k])"></a>
 						<div ng-switch-when="col_10823">{{row.col_10823|date:'mediumDate'}}</div>
 					</td>
 				</tr>
