--- a/src/main/resources/static/f/eh2/icpc2_test4/j2c_table_content.html
+++ b/src/main/resources/static/f/eh2/icpc2_test4/j2c_table_content.html
@@ -1,22 +1,18 @@
-<div on="col_k" ng-switch>
-	<div ng-switch-default>
-		<div
-			ng-bind-html="highlight(row[col_k] + data.fn_col[col_k](row), progr_am.viewes.hrm_menu.seek)">
-		</div>
-		<div ng-include="
-              data.include_cols" on="col_k"
-			ng-switch></div>
-	</div>
-	<div ng-switch-when="person_id" on="request.viewKey" ng-switch>
-		<a ng-switch-when="hrm_cards2" href="?person_id={{row[col_k]}}">
-			{{row[col_k]}} </a> <a ng-switch-when="declaration|declaration3"
-			ng-switch-when-separator="|"
-			href="?person_id={{row[col_k]}}&declaration={{row.declaration}}&seek={{progr_am.viewes.hrm_menu.seek}}">
-			{{row[col_k]}} </a>
-	</div>
-	<a ng-switch-when="division_id" href="?division_id={{row[col_k]}}">
-		{{row[col_k]}} </a> <a ng-switch-when="pip_phisician"
-		href="?declaration={{row.declaration}}&seek={{progr_am.viewes.hrm_menu.seek}}"
-		ng-bind-html="highlight(row[col_k] + data.fn_col[col_k](row), progr_am.viewes.hrm_menu.seek)">
+<div class="w3-dropdown-click">
+	<a href="#" class="am-j2c"
+		ng-keyup="keys_use.keyUp($event, view.dataName)"> {{col_k}}
+		<div ng-include="data.include_cols" on="col_k" ng-switch></div>
 	</a>
-</div>
+
+	<div class="w3-dropdown-content w3-border w3-card-4"
+		ng-style="dropdown_data.ngStyle(col_k)"
+		ng-if="progr_am[view.dataName].isCellSelect(row_k, col_k, row)"
+		ng-class="{'w3-show':progr_am[view.dataName].isCellSelect(row_k, col_k, row)}"
+		on="col_k" ng-switch>
+
+		<div class="w3-tiny w3-gray" title=" — {{col_k}}">
+			{{icpc2_nakaz74.data.col_keys[col_k]}}</div>
+		<i ng-click="progr_am[view.dataName].closeDropdown()"
+			class="fa fa-window-close-o w3-display-topright w3-hover-shadow"
+			aria-hidden="true"></i> a1
+	</div>
