--- a/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
+++ b/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
@@ -38,7 +38,7 @@
 					<div ng-repeat="(value,name) in icpc2_nakaz74.col_values[col_k]"
 						ng-class="{'w3-light-green':row[col_k]==value}"
 						class="w3-hover-light-gray"
-						ng-click="icpc2_nakaz74.col_save(value,row,col_k)">
+						ng-click="progr_am[view.dataName].clickToSave.col_save(value,row,col_k)">
 						<a href="#" ng-keyup="keys_use.keyUp($event, view.dataName)">{{value}}</a>:
 						{{name}}
 					</div>
@@ -57,7 +57,7 @@
 			title="{{row.family_name}} {{
               row.first_name}} {{
               row.second_name}}">
-			{{row.family_name.substring(0,1)}}{{
+			{{row.last_name.substring(0,1)}}{{
 			row.first_name.substring(0,1)}}{{ row.second_name.substring(0,1)}} </span>
 	</div>
 </div>
