--- a/src/main/resources/static/f/eh2/j2c_table.html
+++ b/src/main/resources/static/f/eh2/j2c_table.html
@@ -22,8 +22,7 @@
 				'am-b':row_k==progr_am[view.dataName].selectedCell.row_k,
 				}">{{row_k}}
 				</td>
-				<td ng-repeat="col_k in data.col_sort"
-				ng-init="col_k_content=col_k"
+				<td ng-repeat="col_k in data.col_sort" ng-init="col_k_content=col_k"
 					ng-click="progr_am[view.dataName].selectCell(row_k, col_k)"
 					class="w3-border-bottom w3-hover-shadow"
 					ng-class="{
@@ -32,17 +31,16 @@
 					'w3-leftbar':0==$index && progr_am[view.dataName].isEditRow(row),
 					 'w3-border-left':(0==$index && !progr_am[view.dataName].isEditRow(row)),
 					}">
-					
+
 					<div ng-include="include.j2c_table_content"></div>
-					
-					</td>
+
+				</td>
 			</tr>
 		</tbody>
 	</table>
 </div>
 
-<div class="w3-modal" ng-style="dropdown_data.ask_confirm_delete"
-  >
+<div class="w3-modal" ng-style="dropdown_data.ask_confirm_delete">
   <div class="w3-modal-content">
     <div class="w3-container">
       <span ng-click="dropdown_data.ask_confirm_delete={display:'none'}"
