--- a/src/main/resources/static/f/eh2/table_menu.html
+++ b/src/main/resources/static/f/eh2/table_menu.html
@@ -5,10 +5,10 @@
 	<div class="w3-dropdown-content w3-bar-block w3-border">
 		<a href="#" class="w3-bar-item w3-button"
 			ng-click="progr_am[view.dataName].clickToSave.add_row()"> +
-			Додати запис </a> <a href="#"
+			Додати запис </a> 
+		<a href="#"
 			ng-class="{'w3-disabled':!(progr_am[view.dataName].selectedCell.row_k>=0)}"
-			ng-click="dropdown_data.ngStyleAskDelete()"
-			class="w3-bar-item w3-button"> - Видалити запис 
-			</a>
+			ng-click="progr_am[view.dataName].clickToSave.ngStyleAskDelete()"
+			class="w3-bar-item w3-button"> - Видалити запис	</a>
 	</div>
 </div>
