--- a/src/main/resources/static/f/eh2/calendar/calendar3_dialog_head.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_dialog_head.html
@@ -1,7 +1,3 @@
-<div class="w3-tiny w3-gray w3-display-container">
- {{head}} 
-	<a href="#" ng-click="progr_am.appointmentDialog.close()"><i
-		class="fa fa-window-close-o w3-display-topright w3-hover-shadow"
-		aria-hidden="true"></i>
-	</a>
-</div>
+<div class="w3-tiny w3-gray w13-display-container">{{head}}</div>
+<i ng-click="basicCalendar.gui.closeDropdown()"
+	class="fa fa-window-close-o w3-hover-shadow w3-display-topright"></i>
