--- a/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
+++ b/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
@@ -24,8 +24,7 @@
 				<div class="w3-tiny w3-gray" title=" — {{col_k}}">
 					{{icpc2_nakaz74.data.col_keys[col_k]}}</div>
 				<i ng-click="progr_am[view.dataName].closeDropdown()"
-					class="fa fa-window-close-o w3-display-topright w3-hover-shadow"
-					aria-hidden="true"></i>
+					class="fa fa-window-close-o w3-display-topright w3-hover-shadow"></i>
 
 				<div ng-switch-default>???</div>
 				<div ng-switch-when="col_10766|col_10771|col_10807|col_10777"
