--- a/src/main/resources/static/f/eh2/calendar/calendar_j2c_table_content.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar_j2c_table_content.html
@@ -35,14 +35,15 @@
 		<div ng-switch-when="head_creat_date">
 		<i class="fa fa-calendar-o"></i>
 	</div>
-	<div ng-switch-when="creat_date"
-    title="{{row.created | date : 'longDate'
+		<div ng-switch-when="creat_date"
+			title="{{row.created | date : 'longDate'
   }} {{row.created | date : 'hh:mm'}}/{{row.updated | date : 'short'}}">
-    {{row.created|date:'dd.MM'}} <span class="w3-tiny"
-      title="{{row.family_name}} {{
+			{{row.created|date:'HH:mm'}} <span class="w3-small">
+				{{row.created|date:'dd.MM'}} </span> <span class="w3-tiny"
+				title="{{row.family_name}} {{
               row.first_name}} {{
               row.second_name}}">
-      {{row.last_name.substring(0,1)}}{{
-      row.first_name.substring(0,1)}}{{ row.second_name.substring(0,1)}} </span>
-  </div>
-</div>
+				{{row.last_name.substring(0,1)}}{{ row.first_name.substring(0,1)}}{{
+				row.second_name.substring(0,1)}} </span>
+		</div>
+	</div>
