--- a/src/main/resources/static/f/eh2/calendar/calendar3_top_page.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_top_page.html
@@ -16,6 +16,6 @@ class="w3-hover-light-gray w3-hover-shadow"
 <span class="w13-tiny am-b">
 {{basicCalendar.gui.workTimeStamp|date:'dd.MMMM.yyyy'}}
 <span class="w3-tiny am-normal">
-{{basicCalendar.gui.workTimeStamp|date:'hh:mm'}}
+{{basicCalendar.gui.workTimeStamp|date:'HH:mm'}}
 </span>
 </span>
