--- a/src/main/resources/static/f/eh2/calendar/calendar3_dialog_head.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_dialog_head.html
@@ -1,3 +1,6 @@
 <div class="w3-tiny w3-gray w13-display-container">{{head}}</div>
-<i ng-click="basicCalendar.gui.closeDropdown()"
+<i ng-click="basicCalendar.edit_dialog.closeDropdown()"
 	class="fa fa-window-close-o w3-hover-shadow w3-display-topright"></i>
+<div class="w3-text-red w3-tiny"
+	ng-if="basicCalendar.gui.isWorkTimeStampBeforeToday()">Обрана
+	дата знаходиться в минулому.</div>
