--- a/src/main/resources/static/f/eh2/j2c_table.html
+++ b/src/main/resources/static/f/eh2/j2c_table.html
@@ -22,7 +22,7 @@
 					>{{row_k}}
 				</td>
 				<td ng-repeat="col_k in data.col_sort" ng-init="col_k_content=col_k"
-					ng-click="progr_am[view.dataName].selectCell(row_k, col_k)"
+					ng-click="progr_am[view.dataName].selectCell(row_k, col_k, row)"
 					class="w3-border-bottom w3-hover-shadow"
 					ng-class="{
 					'w3-border':progr_am[view.dataName].isCellSelect(row_k, col_k, row),
