--- a/src/main/resources/static/f/eh2/j2c_table.html
+++ b/src/main/resources/static/f/eh2/j2c_table.html
@@ -3,12 +3,11 @@
 		<thead>
 			<tr class="w3-tiny w3-gray">
 				<th style="background: white;"
-					ng-include="'/f/eh2/table_menu.html'">
+					ng-include="data.include_table_menu">
 					</th>
 				<th ng-repeat="col_k in data.col_sort" title="{{col_k}}"
 					ng-init="col_k_content='head_'+col_k">
-					<div ng-include="
-              data.include_cols" on="head_col_k"
+					<div ng-include="data.include_cols" on="head_col_k"
 						ng-switch></div> {{data.data.col_keys[col_k]}}
 				</th>
 			</tr>
