--- a/src/main/resources/static/f/eh1/lib/table_json_editor.html
+++ b/src/main/resources/static/f/eh1/lib/table_json_editor.html
@@ -7,3 +7,6 @@
 	<div ng-repeat="data in [data[view.dataName]]" ng-init="o=data"
 		ng-include="view.ngInclude"></div>
 </div>
+<div ng-repeat="(k,view) in progr_am.viewes">
+{{k}}
+</div>
