--- a/src/main/resources/static/f/eh2/j2c_table.html
+++ b/src/main/resources/static/f/eh2/j2c_table.html
@@ -18,7 +18,9 @@
 				<td class="w3-small"
 					ng-class="{'am-b':progr_am[view.dataName].isEditRow(row),}"
 					n1g-class="{'am-b':row_k==progr_am[view.dataName].selectedCell.row_k,}"
-					>{{row_k}}
+					>{{row_k}}<span
+					ng-if="row.row_id==request.parameters.person_id"
+					>.</span>
 				</td>
 				<td ng-repeat="col_k in data.col_sort" ng-init="col_k_content=col_k"
 					ng-click="progr_am[view.dataName].selectCell(row_k, col_k, row)"
