--- a/src/main/resources/static/f/pis1-am-1/index1/person_data_form.html
+++ b/src/main/resources/static/f/pis1-am-1/index1/person_data_form.html
@@ -23,7 +23,7 @@
 	<div class="w3-col m3 l3 s3 ">дата народження:</div>
 	<div class="w3-col m9 l9 s9">
 		<input ng-model="registry.data.birth_date1"
-			ng-blur="registry.dateControlle('birth_date1')"
+			ng-blur="dateControlle('birth_date1',registry)"
 			placeholder="дд-мм-рррр дата народженя" class="w3-border">
 		{{registry.data.bd|date:'mediumDate'}}
 		<div class="w3-red w3-small" ng-if="registry.error.birth_date">
