--- a/src/main/resources/static/f/eh2/newpatient/patient_list_j2c_table_content.html
+++ b/src/main/resources/static/f/eh2/newpatient/patient_list_j2c_table_content.html
@@ -2,12 +2,12 @@
 	<div ng-switch-default ng-if="col_k_content.indexOf('head_')!=0"
 		on="col_k_content" ng-switch>
 		<div ng-switch-when="pip_patient"
-		ng-bind-html="highlight(row.pip_patient, 
+			ng-bind-html="highlight(row.pip_patient, 
       progr_am.viewes.hrm_menu.seek
-      )"
-		></div>
+      )"></div>
 		<a ng-switch-when="person_id" href="?person_id={{row.person_id}}">
 			{{row.person_id}} </a>
+		<div ng-switch-when="birth_date">{{row[col_k] | date : 'shortDate'}}</div>
 		<div ng-switch-default>
 			{{row[col_k]}} {{progr_am[view.dataName].getColValue(row, col_k)}} <span
 				ng-if="!row[col_k]" class="w3-tiny">
