--- a/src/main/resources/static/f/eh2/icpc2_test4/j2c_table_content.html
+++ b/src/main/resources/static/f/eh2/icpc2_test4/j2c_table_content.html
@@ -14,5 +14,5 @@
 			{{icpc2_nakaz74.data.col_keys[col_k]}}</div>
 		<i ng-click="progr_am[view.dataName].closeDropdown()"
 			class="fa fa-window-close-o w3-display-topright w3-hover-shadow"
-			aria-hidden="true"></i> a1
+			aria-hidden="true"></i>
 	</div>
