--- a/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
+++ b/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
@@ -29,9 +29,7 @@
 				<div ng-switch-default>???</div>
 				<div ng-switch-when="col_10766|col_10771|col_10807|col_10777"
 					ng-switch-when-separator="|">
-					
-					<div
-						ng-include="include.icpc2_cell_dropdown_content"></div>
+					<div ng-include="include.icpc2_cell_dropdown_content"></div>
 				</div>
 				<div ng-switch-when="col_9775|col_9776|col_10900"
 					ng-switch-when-separator="|">
