correct one 074/o record

--- a/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
+++ b/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
@@ -27,7 +27,7 @@
 					class="fa fa-window-close-o w3-display-topright w3-hover-shadow"></i>
 
 				<div ng-switch-default>???</div>
-				<div ng-switch-when="col_10766|col_10771|col_10807|col_10777"
+				<div ng-switch-when="col_10766|col_11327|col_10771|col_10807|col_10777"
 					ng-switch-when-separator="|">
 					<div ng-include="include.icpc2_cell_dropdown_content"></div>
 				</div>
